Actualizo superfish a la ultima version, de esta manera ahora fuciona para android

--- a/trunk/v2/patrodent/static/css/style.css
+++ b/trunk/v2/patrodent/static/css/style.css
@@ -492,7 +492,7 @@ blockquote a{
 	border-radius:10px;
 	-moz-border-radius:10px;
 	-webkit-border-radius:10px;
-	background:url(../images/important-bg.png) center top no-repeat #66c4e5;
+	background:url(../images/important-bg.png) center top no-repeat #32AC9C;
 	color:#FFF;
 	margin-bottom:20px;
 }
