--- a/trunk/v2/patrodent/templates/antes_y_despues.html
+++ b/trunk/v2/patrodent/templates/antes_y_despues.html
@@ -18,7 +18,7 @@
     </script>
 {% endblock %}
 
-{% block class-antes-despues-link %}class="active"{% endblock %}
+{% block class-antes-despues-link %} active{% endblock %}
 
 {% block content %}
     <div class="wrapper">
