--- a/trunk/v2/patrodent/templates/quienes_somos.html
+++ b/trunk/v2/patrodent/templates/quienes_somos.html
@@ -2,7 +2,7 @@
 
 {% block metadescription %}Quienes forman Patrodent{% endblock %}
 
-{% block class-patrodent-link %}class="active"{% endblock %}
+{% block class-patrodent-link %} active{% endblock %}
 
 {% block title %}Quienes somos - {% endblock %}
 
