--- a/trunk/v2/patrodent/templates/servicios.html
+++ b/trunk/v2/patrodent/templates/servicios.html
@@ -1,6 +1,6 @@
 {% extends "templates/servicio.html" %}
 
-{% block class-servicios-link %}class="active"{% endblock %}
+{% block class-servicios-link %} active{% endblock %}
 
 {% block js-after-before %}
 {% endblock %}
