--- a/trunk/v2/patrodent/templates/templates/servicio.html
+++ b/trunk/v2/patrodent/templates/templates/servicio.html
@@ -1,6 +1,6 @@
 {% extends "templates/base.html" %}
 
-{% block class-servicios-link %}class="active"{% endblock %}
+{% block class-servicios-link %} active{% endblock %}
 
 {% block footerjs %}
     {{ block.super }}
