--- a/trunk/v2/patrodent/templates/index.html
+++ b/trunk/v2/patrodent/templates/index.html
@@ -6,7 +6,7 @@
     <script src="{{ STATIC_URL }}js/tms_presets.js" type="text/javascript"></script>
 {% endblock %}
 
-{% block class-patrodent-link %}class="active"{% endblock %}
+{% block class-patrodent-link %} active{% endblock %}
 
 {% block content %}
     <div class="slider-bottom p5">
