--- a/v2/patrodent/templates/contacto.html
+++ b/v2/patrodent/templates/contacto.html
@@ -4,7 +4,7 @@
 
 {% block metadescription %}Como contactar con la clínica Patrodent{% endblock %}
 
-{% block class-contacto-link %}class="active"{% endblock %}
+{% block class-contacto-link %} active{% endblock %}
 
 {% block content %}
     <div class="wrapper">
