--- a/v2/patrodent/templates/quien_soy.html
+++ b/v2/patrodent/templates/quien_soy.html
@@ -2,7 +2,7 @@
 
 {% block metadescription %}Quién es Patrocinio Gómez Martínez{% endblock %}
 
-{% block class-patrodent-link %}class="active"{% endblock %}
+{% block class-patrodent-link %} active{% endblock %}
 
 {% block title %}Quién soy - {% endblock %}
 
