--- a/v2/patrodent/templates/implantes.html
+++ b/v2/patrodent/templates/implantes.html
@@ -34,7 +34,7 @@
     </div>
     <div class="wrapper indent-bot2">
         <figure class="img-style img-indent">
-            <a href="http://www.youtube.com/v/M74Scwr4v7s" rel="shadowbox[implantes]" title="Video Implantes Dentales">
+            <a href="http://www.youtube.com/v/M74Scwr4v7s?autoplay=1" rel="shadowbox[implantes]" title="Video Implantes Dentales">
                 <img src="{{ STATIC_URL }}images/video_implantes.jpg" alt="Video Implantes Dentales" title="Video Implantes Dentales" />
             </a>
             <span class="afterBeforeText">Video Implantes Dentales</span>
