--- a/v2/patrodent/templates/templates/base.html
+++ b/v2/patrodent/templates/templates/base.html
@@ -9,11 +9,11 @@
     <meta name="Description" content="{% block metadescription %}Clínica Dental Patrocinio Gómez Martínez C/ Marques de Paradas nº 22 1 º dcha Sevilla (junto a plaza de armas){% endblock %}">
    {% block css %}
     <link rel="stylesheet" href="{{ STATIC_URL }}css/reset.css" type="text/css" media="all">
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css" type="text/css" media="all">
     <link rel="stylesheet" href="{{ STATIC_URL }}css/grid.css" type="text/css" media="all">
     <link rel="stylesheet" href="{{ STATIC_URL }}css/animate-flip.css" type="text/css" media="all">
     <link rel="stylesheet" href="{{ STATIC_URL }}css/shadowbox.css" type="text/css" media="all">
     <link rel="stylesheet" href="{{ STATIC_URL }}css/superfish.css" media="all">
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css" type="text/css" media="all">
    {% endblock %}
    {% block js %}
     <script src="{{ STATIC_URL }}js/jquery-1.7.2.min.js" type="text/javascript"></script>
@@ -26,6 +26,7 @@
     <script src="{{ STATIC_URL }}js/Angelina_400.font.js" type="text/javascript"></script>
     <script src="{{ STATIC_URL }}js/jquery.easing.1.3.js" type="text/javascript"></script>
     <script src="{{ STATIC_URL }}js/shadowbox.js" type="text/javascript"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.detect-mobile.js"></script>
     <script type="text/javascript">
         (function($){
             $(document).ready(function () {
@@ -42,8 +43,21 @@
                     }
                 });
                 Shadowbox.init({continuous: true,
-                                onOpen: function() {
-                                    $("iframe").css("visibility", "hidden");
+                                onChange: function(obj) {
+                                    if (jQuery.browser.mobile && obj.content.indexOf("youtube") !== -1) {
+                                        Shadowbox.close();
+                                        window.location.href = obj.content;
+                                    }
+                                },
+                                onOpen: function(obj) {
+                                    if (jQuery.browser.mobile && obj.content.indexOf("youtube") !== -1) {
+                                        setTimeout(function () {
+                                            Shadowbox.close();
+                                            window.location.href = obj.content;
+                                        }, 500);
+                                    } else {
+                                        $("iframe").css("visibility", "hidden");
+                                    }
                                 },
                                 onClose: function() {
                                     $("iframe").css("visibility", "visible");
