--- a/v2/patrodent/templates/templates/servicio.html
+++ b/v2/patrodent/templates/templates/servicio.html
@@ -48,7 +48,7 @@
         <div class="grid_7 suffix_1 omega">
             {% block before-after-title %}
                 <h4 class="margin-bot">Antes y después</h4>
-                <p> Pasa el <strong>ratón</strong> por encima de las imágenes para ver el antes (casos reales)</p>
+                <p> Pasa el <strong>ratón</strong> por encima de las imágenes (o tocalas desde tu movil o tablet) para ver el antes (casos reales)</p>
             {% endblock %}
             {% block before-after %}
             <div class="wrapper indent-bot2">
@@ -97,7 +97,7 @@
         </a>
     </figure>
     <figure>
-        <a href="http://www.youtube.com/v/BBjFInC26Fo" rel="shadowbox[servicio]" title="Instalaciones de Patrodent">
+        <a href="http://www.youtube.com/v/BBjFInC26Fo?autoplay=1" rel="shadowbox[servicio]" title="Instalaciones de Patrodent">
             <img src="{{ STATIC_URL }}images/instalaciones.min.jpg" alt="Instalaciones de Patrodent" title="Instalaciones de Patrodent" />
         </a>
     </figure>
