--- a/trunk/v2/patrodent/templates/index.html
+++ b/trunk/v2/patrodent/templates/index.html
@@ -88,7 +88,7 @@
         </a>
     </figure>
     <figure>
-        <a href="http://www.youtube.com/v/BBjFInC26Fo" rel="shadowbox[index]" title="Instalaciones de Patrodent">
+        <a href="http://www.youtube.com/v/BBjFInC26Fo?autoplay=1" rel="shadowbox[index]" title="Instalaciones de Patrodent">
             <img src="{{ STATIC_URL }}images/instalaciones.min.jpg" alt="Instalaciones de Patrodent" title="Instalaciones de Patrodent" />
         </a>
     </figure>
