Añado imagen de ferula

--- a/trunk/v2/patrodent/templates/atm.html
+++ b/trunk/v2/patrodent/templates/atm.html
@@ -1,6 +1,6 @@
 {% extends "templates/servicio.html" %}
 
-{% block keywords %}ATM, ATM en Sevilla, dolor articular, chasquido articular, disfuncion mandibular, ferula de descarga{% endblock %}
+{% block keywords %}ATM, ATM en Sevilla, dolor articular, chasquido articular, disfuncion mandibular, férula de descarga{% endblock %}
 
 {% block metadescription %}La articulación temporomandibular es el medio de unión de la mandíbula con el craneo{% endblock %}
 
@@ -24,7 +24,7 @@
         </ul>
     </p>
     <p>
-        Una vez que ha aparecido la sintomatología se ha de hacer un diagnóstico correcto por medio de <strong>exploración</strong>, <strong>radiografías</strong> y <strong>Resonancia Magnética</strong>, para averiguar la causa que la origina. Existen diversos tratamientos en función del origen de la disfunción: <strong>Ferula de descarga</strong>, <strong>tratamiento ortodoncico</strong>, <strong>rehabilitacion protésica</strong> y <strong>cirugía</strong>.
+        Una vez que ha aparecido la sintomatología se ha de hacer un diagnóstico correcto por medio de <strong>exploración</strong>, <strong>radiografías</strong> y <strong>Resonancia Magnética</strong>, para averiguar la causa que la origina. Existen diversos tratamientos en función del origen de la disfunción: <strong>Férula de descarga</strong>, <strong>tratamiento ortodoncico</strong>, <strong>rehabilitacion protésica</strong> y <strong>cirugía</strong>.
     </p>
     <p>
         En muchos casos un simple <strong>balanceo de la mordida</strong> (ajuste oclusal) puede dar un descanso inmediato. El método mas usado para conseguir esta relajación inmediata es la férula de descarga
@@ -36,7 +36,6 @@
 
 {% block before-after-title %}
     <h4 class="margin-bot">Imágenes de ATM</h4>
-    <p>Articulación temporomandibular</p>
 {% endblock %}
 
 {% block before-after %}
@@ -48,6 +47,11 @@
     <div class="wrapper indent-bot2">
         <figure class="img-style img-indent"><img src="{{ STATIC_URL }}images/atm2.jpg" alt="Articulación temporomandibular" title="Articulación temporomandibular"/>
             <span class="afterBeforeText">ATM ampliación</span>
+        </figure>
+    </div>
+    <div class="wrapper indent-bot2">
+        <figure class="img-style img-indent"><img src="{{ STATIC_URL }}images/ferula.jpg" alt="Férula de descarga" title="Férula de descarga"/>
+            <span class="afterBeforeText">Férula de descarga</span>
         </figure>
     </div>
 {% endblock %}
