Añado caso de periodoncia

--- a/trunk/v2/patrodent/templates/templates/after_before/inc.periodoncia.html
+++ b/trunk/v2/patrodent/templates/templates/after_before/inc.periodoncia.html
@@ -8,3 +8,8 @@
         <span class="afterBeforeText">Después</span>
     </figure>
 </div>
+<div class="wrapper indent-bot2 afterAndBefore">
+    <figure class="img-style img-indent"><img src="{{ STATIC_URL }}images/periodoncia_despues4.jpg" alt="Caso real periodoncia" title="Caso real periodoncia" class="after" />
+        <span class="afterBeforeText">Después</span>
+    </figure>
+</div>
