--- a/v2/patrodent/templates/templates/base.html
+++ b/v2/patrodent/templates/templates/base.html
@@ -208,7 +208,7 @@
                                 <dl class="contacts">
                                     <dt>Marqués de Paradas 22 1 º dcha<br/>41001 Sevilla</dt>
                                     <dd><span>E-mail:</span><a class="link" href="mailto:info@patrodent.com">info@patrodent.com</a></dd>
-                                    <dd><span>Teléfono:</span>954 21 14 22</dd>
+                                    <dd><span>Teléfono:</span><a class="link" href="tel:954 21 14 22">954 21 14 22</a></dd>
                                     <dd><span>Facebook:</span><a class="link" href="http://es-es.facebook.com/patrodent.patrodent" target="_blank">patrodent.patrodent</a></dd>
                                 </dl>
                             </div>
