--- a/v2/patrodent/templates/instalaciones.html
+++ b/v2/patrodent/templates/instalaciones.html
@@ -1,6 +1,6 @@
 {% extends "templates/base.html" %}
 
-{% block metadescription %}Instalaciones de la clínica Patrodent{% endblock %}
+{% block metadescription %}Instalaciones de la Clínica Dental Patrocinio Gómez Martínez (Patrodent){% endblock %}
 
 {% block class-patrodent-link %}class="active"{% endblock %}
 
