--- a/v2/patrodent/templates/quien_soy.html
+++ b/v2/patrodent/templates/quien_soy.html
@@ -1,6 +1,6 @@
 {% extends "templates/base.html" %}
 
-{% block metadescription %}Quién es Patrocinio Gómez Martínez{% endblock %}
+{% block metadescription %}¿Quién es Patrocinio Gómez Martínez? ¿Cómo se ha formado?{% endblock %}
 
 {% block class-patrodent-link %} active{% endblock %}
 
