Cambio las metadescripciones, duplicadas y cortas

--- a/trunk/v2/patrodent/templates/contacto.html
+++ b/trunk/v2/patrodent/templates/contacto.html
@@ -2,7 +2,7 @@
 
 {% block title %}Contacta con nosotros - {% endblock %}
 
-{% block metadescription %}Como contactar con la clínica Patrodent{% endblock %}
+{% block metadescription %}Como contactar con la Clínica Dental Patrocinio Gómez Martínez (Patrodent){% endblock %}
 
 {% block class-contacto-link %} active{% endblock %}
 
