--- a/trunk/v2/patrodent/templates/quienes_somos.html
+++ b/trunk/v2/patrodent/templates/quienes_somos.html
@@ -1,6 +1,6 @@
 {% extends "templates/base.html" %}
 
-{% block metadescription %}Quienes forman Patrodent{% endblock %}
+{% block metadescription %}¿Quienes forman Patrodent? ¿Cual es nuestro equipo?{% endblock %}
 
 {% block class-patrodent-link %} active{% endblock %}
 
