--- a/v2/patrodent/templates/quienes_somos.html
+++ b/v2/patrodent/templates/quienes_somos.html
@@ -59,7 +59,7 @@
                 </div>
                 <div class="box img-indent">
                     <figure class="img-style p2"><img src="{{ STATIC_URL }}images/empleada1.jpg" alt="" /></figure>
-                    <strong>Lina Álvarez</strong>
+                    <strong>Joana Mazuelos</strong>
                     <span class="bl p1">Higienista dental</span>
                 </div>
                 <div class="box">
