--- a/trunk/v2/patrodent/templates/quienes_somos.html
+++ b/trunk/v2/patrodent/templates/quienes_somos.html
@@ -28,7 +28,7 @@
         </a>
     </figure>
     <figure>
-        <a href="http://www.youtube.com/v/iDxVUIZUjdM?autoplay=1" rel="shadowbox[quienesSomos]" title="Títulos de Patrocinio Gómez">
+        <a href="http://www.youtube.com/v/gt4ECC3SROg?autoplay=1" rel="shadowbox[quienesSomos]" title="Títulos de Patrocinio Gómez">
             <img src="{{ STATIC_URL }}images/titulos.min.jpg" alt="Títulos de Patrocinio Gómez" title="Títulos de Patrocinio Gómez" />
         </a>
     </figure>
