--- a/trunk/v2/patrodent/templates/templates/servicio.html
+++ b/trunk/v2/patrodent/templates/templates/servicio.html
@@ -97,7 +97,7 @@
         </a>
     </figure>
     <figure>
-        <a href="http://www.youtube.com/v/BBjFInC26Fo?autoplay=1" rel="shadowbox[servicio]" title="Instalaciones de Patrodent">
+        <a href="http://www.youtube.com/v/5-JuMRmbmXo?autoplay=1" rel="shadowbox[servicio]" title="Instalaciones de Patrodent">
             <img src="{{ STATIC_URL }}images/instalaciones.min.jpg" alt="Instalaciones de Patrodent" title="Instalaciones de Patrodent" />
         </a>
     </figure>
