--- a/v2/patrodent/templates/instalaciones.html
+++ b/v2/patrodent/templates/instalaciones.html
@@ -13,7 +13,7 @@
                 <h4 class="margin-bot">Nuestras Instalaciones</h4>
                 <div class="wrapper indent-bot2">
                     <figure class="img-style img-indent">
-                        <iframe width="300" height="200" src="http://www.youtube.com/embed/BBjFInC26Fo?autoplay=1" frameborder="0" allowfullscreen></iframe>
+                        <iframe width="300" height="200" src="http://www.youtube.com/embed/5-JuMRmbmXo?autoplay=1" frameborder="0" allowfullscreen></iframe>
                         <span class="afterBeforeText">Visita nuestras instalaciones interactivamente</span>
                     </figure>
                 </div>
@@ -43,7 +43,7 @@
 
 {% block footergallery %}
     <figure>
-        <a href="http://www.youtube.com/v/BBjFInC26Fo?autoplay=1" rel="shadowbox[instalaciones]" title="Instalaciones de Patrodent">
+        <a href="http://www.youtube.com/v/5-JuMRmbmXo?autoplay=1" rel="shadowbox[instalaciones]" title="Instalaciones de Patrodent">
             <img src="{{ STATIC_URL }}images/instalaciones.min.jpg" alt="Instalaciones de Patrodent" title="Instalaciones de Patrodent" />
         </a>
     </figure>
