--- a/trunk/v2/patrodent/templates/quienes_somos.html
+++ b/trunk/v2/patrodent/templates/quienes_somos.html
@@ -55,7 +55,7 @@
                 <div class="box img-indent">
                     <figure class="img-style p2"><img src="{{ STATIC_URL }}images/angela.jpg" alt="" /></figure>
                     <strong>Angela Martín</strong>
-                    <span class="bl p1">Estudiante de Odontologia</span>
+                    <span class="bl p1">Graduada en Odontología</span>
                 </div>
                 <div class="box img-indent">
                     <figure class="img-style p2"><img src="{{ STATIC_URL }}images/empleada2.jpg" alt="" /></figure>
@@ -64,7 +64,7 @@
                 </div>
                 <div class="box">
                     <figure class="img-style p2"><img src="{{ STATIC_URL }}images/empleada1.jpg" alt="" /></figure>
-                    <strong>Paqui Domínguez</strong>
+                    <strong>Inmaculada Bejarano</strong>
                     <span class="bl p1">Higienista dental</span>
                 </div>
             </div>
