--- a/v2/patrodent/templates/contacto.html
+++ b/v2/patrodent/templates/contacto.html
@@ -4,6 +4,8 @@
 
 {% block metadescription %}Como contactar con la Clínica Dental Patrocinio Gómez Martínez (Patrodent){% endblock %}
 
+{% block pageclass %}contact{% endblock %}
+
 {% block class-contacto-link %} active{% endblock %}
 
 {% block content %}
