--- a/v2/patrodent/templates/index.html
+++ b/v2/patrodent/templates/index.html
@@ -6,6 +6,8 @@
     <script src="{{ STATIC_URL }}js/tms_presets.js" type="text/javascript"></script>
 {% endblock %}
 
+{% block pageclass %}index{% endblock %}
+
 {% block class-patrodent-link %} active{% endblock %}
 
 {% block content %}
