--- a/v2/patrodent/templates/instalaciones.html
+++ b/v2/patrodent/templates/instalaciones.html
@@ -6,6 +6,7 @@
 
 {% block title %}Instalaciones - {% endblock %}
 
+{% block pageclass %}Place{% endblock %}
 {% block content %}
     <div class="wrapper">
         <div class="alpha prefix_1 grid_9">
