--- a/v2/patrodent/templates/quien_soy.html
+++ b/v2/patrodent/templates/quien_soy.html
@@ -6,6 +6,8 @@
 
 {% block title %}Quién soy - {% endblock %}
 
+{% block pageclass %}who{% endblock %}
+
 {% block footergallery %}
     <figure>
         <a href="http://www.youtube.com/v/gt4ECC3SROg?autoplay=1" rel="shadowbox[quienSoy]" title="Títulos de Patrocinio Gómez">
