--- a/v2/patrodent/templates/quienes_somos.html
+++ b/v2/patrodent/templates/quienes_somos.html
@@ -6,6 +6,8 @@
 
 {% block title %}Quienes somos - {% endblock %}
 
+{% block pageclass %}whoWeAre{% endblock %}
+
 {% block footergallery %}
     <figure>
         <a href="{{ STATIC_URL }}images/patrocinio_despacho.jpg" rel="shadowbox[quienesSomos]" title="Patrocinio en el despacho">
