--- a/v2/patrodent/templates/servicios.html
+++ b/v2/patrodent/templates/servicios.html
@@ -7,6 +7,8 @@
 
 {% block title %}Servicios - {% endblock %}
 
+{% block pageclass %}services{% endblock %}
+
 {% block metadescription %}Servicios que ofrece la Clínica Dental Patrocinio Gómez Martínez (Patrodent){% endblock %}
 
 {% block before-after-title-wrapper %}
