Last changes for responsive version

--- a/v2/patrodent/templates/templates/formulario_contacto.html
+++ b/v2/patrodent/templates/templates/formulario_contacto.html
@@ -20,15 +20,13 @@
                     <label class="class123-label class123-fieldname fontbold  requiredfield " for="id123-control1735479" id="id123-title1735479">
                         Nombre:
                     </label>
-                    <label class="class123-labelinfo labelinfo" id="id123-titlemic1735479">
-                        Escribe tu nombre completo
-                    </label>
                 </div>
                 <div align="left" class="rowright" style="">
                     <input id="errorflagrow1" type="hidden" value=""/>
                     <input id="id123-control1735479" name="control1735479" onchange="InputRules(1735479); ;  " style="width:280px; max-width:96% !important;" type="text" value=""/>
                 </div>
             </div>
+             <label class="class123-labelinfo labelinfo" id="id123-titlemic1735479">Escribe tu nombre completo</label>
         </div>
         <!-- fieldcontainer ends -->
         <!-- fieldcontainer -->
@@ -38,14 +36,14 @@
                     <label class="class123-label class123-fieldname fontbold " for="id123-control2725345" id="id123-title2725345">
                         Teléfono
                     </label>
-                    <label class="class123-labelinfo labelinfo" id="id123-titlemic2725345">
-                        Escribe tu teléfono para poder contactar contigo
-                    </label>
                 </div>
                 <div align="left" class="rowright" style="">
                     <input id="errorflagrow2" type="hidden" value=""/>
                     <input id="id123-control2725345" name="control2725345" onchange="InputRules(2725345); ;  " onclick="InputActions(this,'row2');" onkeyup="InputActions(this,'row2'); " style="width:280px; max-width:96% !important;" type="text" value=""/>
                 </div>
+                <label class="class123-labelinfo labelinfo" id="id123-titlemic2725345">
+                        Escribe tu teléfono para poder contactar contigo
+                </label>
             </div>
         </div>
         <!-- fieldcontainer ends -->
@@ -56,14 +54,14 @@
                     <label class="class123-label class123-fieldname fontbold  requiredfield " for="id123-control1735480" id="id123-title1735480">
                         Email:
                     </label>
-                    <label class="class123-labelinfo labelinfo" id="id123-titlemic1735480">
-                        Escribe tu email para poder contactar contigo
-                    </label>
                 </div>
                 <div align="left" class="rowright" style="">
                     <input id="errorflagrow2" type="hidden" value=""/>
                     <input id="id123-control1735480" name="control1735480" onchange="InputRules(1735480); ;  " style="width:280px; max-width:96% !important;" type="text" value=""/>
                 </div>
+                <label class="class123-labelinfo labelinfo" id="id123-titlemic1735480">
+                        Escribe tu email para poder contactar contigo
+                </label>
             </div>
         </div>
         <!-- fieldcontainer ends -->
