--- a/v2/patrodent/static/css/style.css
+++ b/v2/patrodent/static/css/style.css
@@ -294,53 +294,54 @@ ul.menu li li:hover li ul, ul.menu li li.sfHover li ul {
 #page5 .content-inner, #page6 .content-inner {padding-bottom:85px;}
 
 h4 {
-	font-size:24px; 
-	line-height:1.208em; 
-	color:#657181;
-	font-weight:normal;
-	letter-spacing:-1px;
+    font-size:24px; 
+    line-height:1.208em; 
+    color:#657181;
+    font-weight:normal;
+    letter-spacing:-1px;
 }
 h4 span {
-	display:block;
-	margin-top:-3px;
+    display:block;
+    margin-top:-3px;
 }
 h2 {
-	font-family:Arial, Helvetica, sans-serif;
-	font-size:34px; 
-	line-height:1.222em; 
-	color:#32AC9C;
-	font-weight:normal;
-	letter-spacing:-1px;
-	padding:0px 0px 19px;
-	border-bottom:1px solid #e2e8eb;
-	margin-bottom:18px;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size:34px; 
+    line-height:1.222em; 
+    color:#32AC9C;
+    font-weight:normal;
+    letter-spacing:-1px;
+    padding:0px 0px 19px;
+    border-bottom:1px solid #e2e8eb;
+    margin-bottom:18px;
 }
 h2 span {
-	margin-top:-8px;
-	display:inline-block;
+    margin-top:-8px;
+    display:inline-block;
 }
 h5 {
-	font-size:15px;
-	line-height:1.222em;
-	color:#32AC9C;
-	text-transform:uppercase;
-	font-weight:normal;
+    font-size:15px;
+    line-height:1.222em;
+    color:#32AC9C;
+    text-transform:uppercase;
+    font-weight:normal;
 }
 h3 {
-	font-size:48px; 
-	line-height:1.208em; 
-	color:#32ac9c;
-	font-weight:normal;
-	letter-spacing:-1px;
+    font-size:48px; 
+    line-height:1.208em; 
+    color:#32ac9c;
+    font-weight:normal;
+    letter-spacing:-1px;
 }
 
+
 a .sign, .sign {
-	font-size:26px;
-	line-height:36px;
-	color:#727272;
-	letter-spacing:-1px;
-	text-decoration:none;
-	display:inline-block;
+    font-size:26px;
+    line-height:36px;
+    color:#727272;
+    letter-spacing:-1px;
+    text-decoration:none;
+    display:inline-block;
 }
 a.sign:hover{
 	color:#32ac9c;
@@ -779,6 +780,12 @@ nav a#pull {
     display: none;
 }
 
+form.form .labelinfo {
+    width: 100%;
+    text-align: left;
+    clear: both;
+}
+
 @media only screen and (max-width : 1024px) {
     header {
         margin-top: 2.5em;
@@ -882,10 +889,11 @@ nav a#pull {
         margin: 0 auto 2em;
     }
     .container_24 .wrapper .grid_22 {
-        width: 80%;
+        display: block;
         float: none;
-        padding-left: 0;
-        padding-right: 0;
+        width: auto;
+        padding-left: 20px;
+        padding-right: 20px;
         margin: 0 auto;
     }
     .container_24 .grid_21 {
@@ -956,6 +964,7 @@ nav a#pull {
         height: 397px;
         width: 524px;
     }
+
 }
 
 @media only screen and (max-width : 843px) {
@@ -1022,6 +1031,12 @@ nav a#pull {
     .beforeAfter section .img-indent {
         margin: 0 25px 0 0;
     }
+    section .container_24 .wrapper .grid_7,
+    section .container_24 .wrapper .grid_15 {
+        width: 100%;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
 }
 @media only screen and (max-width : 610px) {
     section .list-1.columns3 li {
@@ -1029,11 +1044,6 @@ nav a#pull {
     }
     section .important-block {
         background-image: none;
-    }
-    section .container_24 .wrapper .grid_7,
-    section .container_24 .wrapper .grid_15 {
-        width: 100%;
-        padding-left: 20px;
     }
     section .container_24 .wrapper .grid_7 .wrapper.indent-bot2 {
         display: inline-block;
@@ -1065,6 +1075,31 @@ nav a#pull {
     }
 }
 
+@media only screen and (max-width : 575px) {
+    .imgswrapper {
+        display: block;
+        width: 100%;
+        text-align: center;
+    }
+    .imgswrapper div figure div {
+        position: relative;
+    }
+    .imgswrapper div figure div img {
+        left: 0;
+    }
+    .imgswrapper .img-style {
+        float: none;
+        display: inline-block;
+    }
+    .afterAndBeforePage .imgswrapper .afterAndBefore {
+        float: none;
+        display: inline-block;
+    }
+    .beforeAfter .content-inner {
+        padding: 1em;
+    }
+}
+
 @media only screen and (max-width : 560px) {
     header {
         zoom: 0.6;
@@ -1081,16 +1116,32 @@ nav a#pull {
     }
 }
 
-@media only screen and (max-width : 560px) {
+@media only screen and (max-width : 520px) {
     .index .slider-wrapper {
         zoom: 0.7;
     }
+    .container_24 .grid_13 {
+        width: auto;
+    }
+}
+
+@media only screen and (max-width : 480px) {
+    .imgwrapper {
+        display: block;
+        text-align: center;
+    }
+    .imgwrapper div {
+        float: none;
+        margin: 0 auto 1em;
+    }
+
 }
 
 @media only screen and (max-width : 400px) {
     .index .slider-wrapper {
         zoom: 0.6;
     }
+
 }
 
 @media only screen and (max-width : 350px) {
