--- a/v2/patrodent/templates/quienes_somos.html
+++ b/v2/patrodent/templates/quienes_somos.html
@@ -42,7 +42,9 @@
         <div class="alpha prefix_1 grid_7">
             <div class="border-1">
                 <h4 class="margin-bot">Médico estomatólogo</h4>
+                <div class="imgswrapper">
                 <figure class="img-style indent-bot2"><img src="{{ STATIC_URL }}images/patrocinio.jpg" alt="" /></figure>
+                </div>
                 <div class="clear"></div>
                 <blockquote>La experiencia y profesionalidad que nos avalan durante más de 25 años implica un alto grado de formación que tiene como resultado tratamientos de alta calidad junto con una atención personalizada, de confianza y garantía.</blockquote>
                 <p class="color-3 it p1">Nuestro personal está altamente cualificado y de experiencia...”</p>
@@ -54,20 +56,26 @@
             <h5 class="indent-bot">Nuestro personal está altamente cualificado</h5>
             <p class="indent-bot2">Les presentamos a nuestro personal, de la clínica, </p>
             <div class="wrapper indent-bot">
-                <div class="box img-indent">
-                    <figure class="img-style p2"><img src="{{ STATIC_URL }}images/angela.jpg" alt="" /></figure>
-                    <strong>Angela Martín</strong>
-                    <span class="bl p1">Graduada en Odontología</span>
+                <div class="imgwrapper">
+                    <div class="box img-indent">
+                        <figure class="img-style p2"><img src="{{ STATIC_URL }}images/angela.jpg" alt="" /></figure>
+                        <strong>Angela Martín</strong>
+                        <span class="bl p1">Graduada en Odontología</span>
+                    </div>
                 </div>
-                <div class="box img-indent">
-                    <figure class="img-style p2"><img src="{{ STATIC_URL }}images/empleada2.jpg" alt="" /></figure>
-                    <strong>Rosario Fernández</strong>
-                    <span class="bl p1">Higienista dental</span>
+                <div class="imgwrapper">
+                    <div class="box img-indent">
+                        <figure class="img-style p2"><img src="{{ STATIC_URL }}images/empleada2.jpg" alt="" /></figure>
+                        <strong>Rosario Fernández</strong>
+                        <span class="bl p1">Higienista dental</span>
+                    </div>
                 </div>
-                <div class="box">
-                    <figure class="img-style p2"><img src="{{ STATIC_URL }}images/empleada1.jpg" alt="" /></figure>
-                    <strong>Inmaculada Bejarano</strong>
-                    <span class="bl p1">Higienista dental</span>
+                <div class="imgwrapper">
+                    <div class="box">
+                        <figure class="img-style p2"><img src="{{ STATIC_URL }}images/empleada1.jpg" alt="" /></figure>
+                        <strong>Inmaculada Bejarano</strong>
+                        <span class="bl p1">Higienista dental</span>
+                    </div>
                 </div>
             </div>
         </div>
